This fixes little iOS safari icon jump

--- a/components/Button/Button--default.scss
+++ b/components/Button/Button--default.scss
@@ -31,6 +31,7 @@
 
   .Button-icon {
     margin-right: rem($space-3xs * -1);
+    will-change: transform;
   }
 }
 
